--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             loading-screen="enabled: false;"
             renderer="logarithmicDepthBuffer: true;
                       colorManagement: true;
-                      physicallyCorrectLights: true;
-                      gammaOutput: true;"
+                      physicallyCorrectLights: true;"
                  
             renderer.outputEncoding = sRGBEncoding
             precision: mediump     
