--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                       colorManagement: true;
                       physicallyCorrectLights: true;"
                  
-            renderer.outputEncoding = sRGBEncoding
+            renderer.outputEncoding = THREE.GammaEncoding
             precision: mediump     
             arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
             id="scene"
