--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
             vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
             renderer="logarithmicDepthBuffer: true;
-                      physicallyCorrectLights: true;"
+                      physicallyCorrectLights: true;
+                      precision: medium;"
                  
             renderer.outputEncoding = THREE.GammaEncoding
             precision: mediump     
             arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
             id="scene"
             embedded
-            gesture-detector    
+            gesture-detector
+            
         >
             <a-assets>
                 <a-asset-item
