--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
             renderer="logarithmicDepthBuffer: true;
-                      physicallyCorrectLights: true;
-                      precision: medium;"
+                      physicallyCorrectLights: true;"
                  
             renderer.outputEncoding = THREE.GammaEncoding
             precision: mediump     
