--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             renderer="logarithmicDepthBuffer: true;
                       physicallyCorrectLights: true;"
                  
-            renderer.outputEncoding = THREE.GammaEncoding
+            renderer.outputEncoding = THREE.sRGBEncoding;
             precision: mediump     
             arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
             id="scene"
