--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 ></a-entity>
             </a-marker>
 
-            <a-entity camera>
+            <a-entity camera 
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;">
              <a-entity
                     id="bowser-model"
                     scale="0.02592729877111241 0.02592729877111241 0.02592729877111241"
