--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             </a-marker>
 
             <a-entity camera 
-                raycaster="objects: .clickable"
-                emitevents="true"
-                cursor="fuse: false; rayOrigin: mouse;">
+               >
              <a-entity
                     id="bowser-model"
                     scale="0.02592729877111241 0.02592729877111241 0.02592729877111241"
@@ -63,6 +61,9 @@
                     gltf-model="#animated-asset"
                     class="clickable"
                     gesture-handler
+                    raycaster="objects: .clickable"
+                    emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
                 ></a-entity>
             </a-entity>
         </a-scene>
