--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
                 ></a-entity>
+                <a-box></a-box>
+                <a-box></a-box>
             </a-entity>
         </a-scene>
        </a-entity>
