--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
                 ></a-entity>
-                <a-box position="0 0 -3"></a-box>
-                <a-box position="0 0 -6"></a-box>
+                <a-box position="0 2 -3" width="0.5"></a-box>
+                <a-box position="0 0 -6" width="0.3"></a-box>
             </a-entity>
         </a-scene>
        </a-entity>
