--- a/index.html
+++ b/index.html
@@ -33,20 +33,8 @@
             </a-assets>
 
 
-            <a-entity camera 
-               >
-             <a-entity
-                    id="bowser-model"
-                    scale="0.02592729877111241 0.02592729877111241 0.02592729877111241"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    class="clickable"
-                    gesture-handler
-                    raycaster="objects: .clickable"
-                    emitevents="true"
-                cursor="fuse: false; rayOrigin: mouse;"
-                ></a-entity>
-                <a-box position="0 0 -3" width="0.5" height="0.2"></a-box>
+            <a-entity camera>
+                <a-box position="0 -0.5 -3" width="0.1" height="0.05"></a-box>
             </a-entity>
         </a-scene>
        </a-entity>
