--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
             <a-entity camera>
-                <a-box position="0 -0.5 -3" width="0.1" height="0.05"></a-box>
+                <a-box position="0 -0.5 -3" width="0.1" height="0.05" depth="0.1"></a-box>
             </a-entity>
         </a-scene>
        </a-entity>
