--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 ></a-asset-item>
             </a-assets>
 
-
+            <a-box></a-box>
+            
             <a-entity camera>
                 <a-box position="0 -0.5 -3" width="0.1" height="0.05" depth="0.1"></a-box>
             </a-entity>
