--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                      
                     <a-entity
                     id="bowser-model"
-                    scale="0.2904328751566968 0.2904328751566968 0.2904328751566968"
-                    position="0 -5 0"
+                    scale="1 1 1"
+                    position="0 0 0"
                     animation-mixer="loop: repeat"
                     glb-model="#animated-asset"
                     class="clickable"
