--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     scale="1 1 1"
                     position="0 0 0"
                     animation-mixer="loop: repeat"
-                    glb-model="#animated-asset"
+                    gltf-model="#animated-asset"
                     class="clickable"
                     gesture-handler
                     ></a-entity> 
