--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
             <a-entity camera>
                 <a-box id="camera" position="0 -1 -3" width="0.1" height="0.05" depth="0.1"></a-box>
-                <a-box id="camera" position="1 -1 -3" width="0.1" height="0.05" depth="0.1"></a-box>
+                <a-box id="switch" position="1 -1 -3" width="0.1" height="0.05" depth="0.1"></a-box>
                 
                 <a-entity
                  raycaster="objects: .clickable"
