--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             
             <a-entity camera>
-                <a-box id="camera" position="0 -1 -3" width="0.1" height="0.05" depth="0.1"></a-box>
+                <a-circle color="#CCC" radius="20" rotation="-90 0 0"></a-circle>
                 <a-box id="switch" position="1 -1 -3" width="0.1" height="0.05" depth="0.1"></a-box>
                 
                 <a-entity
