--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             
             <a-entity camera>
-                <a-circle color="#CCC" position="-0.3 -1 -3" radius="0.5" rotation="0 0 0"></a-circle>
+                <a-circle color="#ffffff" position="0 -1 -3" radius="0.08" rotation="0 0 0"></a-circle>
                 <a-box id="switch" position="-0.1 -1 -3" width="0.1" height="0.05" depth="0.1"></a-box>
                 
                 <a-entity
