--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
                     id="animated-asset"
                     src="assets/icecream.glb"
                 ></a-asset-item>
+                 <img id="cam" src="pic.png">
             </a-assets>
 
             
             <a-entity camera>
                 <a-circle color="#ffffff" position="0 -1 -3" radius="0.08" rotation="0 0 0"></a-circle>
+                <a-image src="#cam" width="0.5" height="0.5"></a-image>
                 
                 <a-entity
                  raycaster="objects: .clickable"
