--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="gesture-handler.js"></script>
+        <script src="https://unpkg.com/aframe-click-drag-component"></script> 
+  <script>
+    registerAframeClickDragComponent(window.AFRAME);
+  </script> 
         
     <script>
 
@@ -46,6 +50,7 @@
                     gltf-model="#animated-asset"
                     class="clickable"
                     gesture-handler
+                    click-drag
                     ></a-entity> 
                     
                  </a-entity>
