--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     gltf-model="#animated-asset"
                     class="clickable"
                     gesture-handler
+                    z-roll
                     ></a-entity> 
                     
                  </a-entity>
