--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a-entity
                      cursor="fuse: false; rayOrigin: mouse;"
                      raycaster="objects: .clickable"
-                     emitevents="true"></a-entity>
+                     emitevents="true">
             
             <a-entity camera>
                         
