--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a-entity camera>
                 
                     <a-entity
-                    cursor="fuse: false; rayOrigin: mouse;"
+                    cursor
                     raycaster="objects: .clickable"
                     emitevents="true"></a-entity>
                         
