--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
                 ></a-asset-item>
             </a-assets>
             
-              <a-entity
-                    cursor
-                    raycaster="objects: .clickable"
-                    emitevents="true"></a-entity>
+              <a-entity cursor></a-entity>
   
             <a-entity camera>
                         
@@ -48,7 +45,6 @@
                     position="0 0 -2"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    class="clickable"
                     gesture-handler
                     z-roll
                     ></a-entity> 
