--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     z-roll
+                    gesture-handler
                     ></a-entity> 
                     
                  </a-entity>
