--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="gesture-handler.js"></script>
+        <script src="backend.js"></script>
         
     <script>
 
